infrastructure/kustomize/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-test
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: argocd-test
  type: ClusterIP
