infrastructure/kustomize/application/ingress_route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host()
      kind: Rule
      services:
        - name: argocd-test
          port: 5000
